tests/script/negative/undefinedness/access_restriction_bad.s
global account bob;

transition initial -> terminal;

@initial [roles: {bob}]
go() { terminate(); }
